--- a/css/main.css
+++ b/css/main.css
@@ -1,71 +1,9 @@
-#share2 {
-	margin-right: 20px !important;
+.legend-tile {
+	width: 36px;
+	height: 36px;
 }
 
-#share2.ff3 {
-	margin-bottom: 15px !important;
-}
 
-#old_browser_msg {
-	display: none;
-	float: right;
-	clear: right;
-	width: 500px;
-	color: white;
-	background: #D53E4F;
-	border: 1px solid #9E0142;
-	padding: 5px;
-	margin-right: 24px;
-}
-
-#controls fieldset {
-	width: 250px;
-}
-
-#controls span {
-	float: left;
-	width: 120px;
-	clear: left;
-}
-
-#controls button {
-	float: left;
-}
-
-fieldset#state label, fieldset#state input {
-	display: none;
-}
-
-fieldset#state.ff3 {
-	width: 500px;
-}
-
-fieldset#state.ff3 label {
-	display: block !important;
-}
-
-fieldset#type {
-	margin-right: 49px;
-	float: left;
-}
-
-#state_all_label {
-	display: inline !important;
-}
-
-#scale {
-	float: right;
-}
-
-#scale ul {
-	list-style-type: none;
-}
-
-#scale li {
-	float: left;
-	width: 15px;
-	height: 15px;
-}
 
 #visualization {
 	clear: all;
@@ -148,29 +86,6 @@ th.h7, th.h8, th.h9, th.h10, th.h11, th.h12, th.h13, th.h14, th.h15, th.h16, th.
 	border: 1px solid white;
 }
 
-#map {
-	float: left;
-	width: 320px;
-	height: 202px;
-	margin-bottom: 15px;
-}
-
-	#map path.state {
-		fill: #ddd;
-		stroke: white;
-		stroke-width: 1px;
-	}
-
-	#map path.state:hover {
-		fill: #5eab1f;
-		fill: #999;
-		cursor: pointer;
-	}
-
-	#map path.state.sel {
-		fill: #444;
-		cursor: default;
-	}
 
 #legend {
 	clear: left;
@@ -194,6 +109,7 @@ th.h7, th.h8, th.h9, th.h10, th.h11, th.h12, th.h13, th.h14, th.h15, th.h16, th.
 	list-style-type: none;
 	overflow: hidden;
 	clear: both;
+	list-style: none;
 }
 
 #legend li {
@@ -215,115 +131,7 @@ th.h7, th.h8, th.h9, th.h10, th.h11, th.h12, th.h13, th.h14, th.h15, th.h16, th.
 	float: left;
 }
 
-#states_nav {
-	width: 400px;
-	float: left;
-	margin-left: 20px;
-}
 
-#states_nav p {
-	margin-left: 4px;
-}
-
-#wtf {
-	float: left;
-	width: 515px;
-}
-
-#poweredby {
-	float: right !important;
-	margin-top: -11px !important;
-}
-
-#poweredby.old_browsers {
-	display: none;
-	position: absolute;
-	top: 463px;
-	right: 24px;
-}
-
-#wtf .title {
-	background: #fdf;
-}
-
-#pc2mob {
-	float: left;
-}
-
-#pc2mob path {
-	stroke: white;
-	stroke-width: 2px;
-}
-
-#pc2mob.all path.pc {
-	fill: #ddd;
-}
-
-#pc2mob.all path.mob {
-	fill: #ccc;
-}
-
-#pc2mob.pc path.pc {
-	fill: #444;
-}
-
-#pc2mob.pc path.mob {
-	fill: #ddd;
-}
-
-#pc2mob.mob path.pc {
-	fill: #ddd;
-}
-
-#pc2mob.mob path.mob {
-	fill: #444;
-}
-
-#pc2mob ul, #ie8_percents {
-	list-style-type: none;
-	margin-top: 20px 0 0 45px;
-	width: 150px;
-}
-
-#pc2mob li, #ie8_percents li {
-	float: left;
-	width: 75px;
-	text-align: center;
-}
-
-#pc2mob li span, #ie8_percents li span {
-	display: block;
-	font-size: 24px;
-	line-height: 24px;
-}
-
-#pc2mob.all li.pc, #ie8_percents li.pc {
-	color: #ccc;
-}
-
-#pc2mob.all li.mob, #ie8_percents li.mob {
-	color: #aaa;
-}
-
-#pc2mob.pc li.pc {
-	color: #444;
-}
-
-#pc2mob.pc li.mob {
-	color: #999;
-}
-
-#pc2mob.mob li.pc {
-	color: #999;
-}
-
-#pc2mob.mob li.mob {
-	color: #444;
-}
-
-#pc2mob svg {
-	margin: 0 70px 0 0;
-}
 
 #hourly_values {
 	float: left;
@@ -351,110 +159,6 @@ th.h7, th.h8, th.h9, th.h10, th.h11, th.h12, th.h13, th.h14, th.h15, th.h16, th.
 	display: none;
 }
 
-
-#header h1, #header p#subtitle {
-	margin-left: 18px;
-}
-
-#footer {
-	clear: both;
-	margin: 25px !important;
-}
-
-.controls {
-	margin: 0 0 20px 7px;
-	font-size: 12px;
-	line-height: 12px;
-}
-
-.controls input {
-	display: none;
-	width: 0;
-	height: 0;
-	margin: 0;
-	padding: 0;
-	opacity: 0;
-}
-
-.controls label {
-	float: left;
-	display: block;
-	cursor: pointer;
-	padding: 4px 6px;
-	background: #ddd;
-	border: 1px solid #ccc;
-	-moz-border-radius: 2px;
-	border-radius: 2px;
-	margin: 0 3px 2px 0;
-	color: #888;
-}
-
-.controls label:hover {
-	background: #999;
-	color: white;
-	border: 1px solid #888;
-}
-
-.controls label.sel {
-	background: #444;
-	color: white;
-	border: 1px solid #333;
-	cursor: default;
-}
-
-.controls button {
-	padding: 2px 6px 3px 6px;
-	background: #ddd;
-	border: 1px solid #ccc;
-	-moz-border-radius: 2px;
-	border-radius: 2px;
-	cursor: pointer;
-	color: #888;
-	font-size: 12px;
-	margin: 0;
-
-}
-
-.controls button:hover {
-	background: #999;
-	color: white;
-	border: 1px solid #888;
-}
-
-.controls button.sel {
-	background: #444;
-	color: white;
-	border: 1px solid #333;
-	cursor: default;
-}
-
-h2 {
-	margin-top: -2px;
-	font-size: 28px;
-	line-height: 28px;
-	margin-bottom: 30px;
-	width: 250px;
-	margin-left: -50px;
-	z-index: -1337;
-	text-align: center;
-}
-
-p.subtitle {
-	font-size: 13px;
-	line-height: 19px;
-	padding-top: 2px;
-	color: #999;
-}
-
-
-#sharestatic3 {
-	margin-right: 22px;
-	margin-bottom: 0;
-}
-
-#truliaBar a {
-	width: 895px !important;
-}
 
 html.ie8 #visualization, html.ie9 #visualization {
 	height: 285px !important;
