Added images for visualization evolution. Trying out different data types for 247 visualization. Fixed quirky headers for labels on first visualization that were doing something weird with bootstrap.

--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,8 @@
 	color: #ccc;
 }
 
-th.h7, th.h8, th.h9, th.h10, th.h11, th.h12, th.h13, th.h14, th.h15, th.h16, th.h17, th.h18, th.h19 {
+th.head7, th.head8, th.head9, th.head10, th.head11, th.head12, th.head13,
+th.head14, th.head15, th.head16, th.head17, th.head18, th.head19 {
 	color: #444 !important;
 }
 
