Added R processing file. New data file. Added new bar chart with flight volume. Updated index respoectiveley.

--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,14 @@
 Styles guide for the flight visualizaiton.
 
 */
+html,body{
+height:100%;
+}
+
+.fill {
+    min-height: 100%;
+    height: 100%;
+}
 
 
 .summary {
